# Email-Assistant

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  README.old.md  START.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  schema.sql
backend/app/: __init__.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: auth.py  chat.py
backend/app/services/: ai_service.py  ai_service.py.backup  gmail_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/components/: AnimatedBackground.tsx  ChatInterface.tsx  ConfirmationDialog.tsx  EmailCard.tsx  MessageBubble.tsx
frontend/src/hooks/: useChat.ts  useChatStore.ts
frontend/src/lib/: apiClient.ts
